fix: replace deprecated word-wrap

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -89,7 +89,7 @@ svg {
 		& > .rich-text--wrapper,
 		& > a > .rich-text--wrapper {
 			padding-inline-start: 10px;
-			word-wrap: anywhere;
+			overflow-wrap: anywhere;
 		}
 	}
 
